--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -9,3 +9,18 @@ nav_order: 1
 ## 2021-02-11
 
 ### CI, CD란 무엇인가?
+
+CI는 Continuous Integration 즉, 지속적인 통합이라는 의미이다.
+지속적인 통합이란 어플리케이션의 새로운 코드 변경 사항이 정기적으로
+빌드 및 테스트 되어 공유 레포지토리에 통합하는 것을 의미한다.
+
+예를 들면?
+- 다수의 개발자가 한 팀으로 작업할 경우, 이 공유 레포지토리에 수 많은 커밋들이 쌓인다.
+그럴 때마다, 기능별로 빌드/테스트/병함까지 하려면 번거롭기 때문에 자동화된 빌드&테스트는
+원천 소스코드의 충돌 등을 방어하는 Benefit을 제공할 수 있다.
+
+- MSA 환경에서 대부분 Agile(소규모 기능 단위로 빠르게 개발 & 적용을 반복하는 개발방법론) 방법론이 적용된다.
+기능 추가가 매우 빈번하기 때문에 동작테스트도 중요하다. 이런 상황에서 CI의 적용은 기능 충돌 방지 등의 Benefit을 제공한다.
+
+이러한 CI의 핵심 목표는 버그를 신속하게 찾아 해결하고, 소프트웨어의 품질을 개선하고
+새로운 업데이트의 검증 및 릴리즈의 시간을 단축시키는 것에 있다.
