--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -10,7 +10,7 @@ nav_order: 1
 
 ### CI, CD란 무엇인가?
 
-CI는 Continuous Integration 즉, 지속적인 통합이라는 의미이다.
+<b>CI는 Continuous Integration 즉, 지속적인 통합</b>이라는 의미이다.
 지속적인 통합이란 어플리케이션의 새로운 코드 변경 사항이 정기적으로
 빌드 및 테스트 되어 공유 레포지토리에 통합하는 것을 의미한다.
 
@@ -24,3 +24,13 @@ CI는 Continuous Integration 즉, 지속적인 통합이라는 의미이다.
 
 이러한 CI의 핵심 목표는 버그를 신속하게 찾아 해결하고, 소프트웨어의 품질을 개선하고
 새로운 업데이트의 검증 및 릴리즈의 시간을 단축시키는 것에 있다.
+
+<b>CD는 Continuous Delivery & Continuous Depolyment</b> 두 용어 모두의 축약어다.
+해석하자면 지속적인 서비스 제공 혹은 지속적인 배포라는 의미를 갖고 있다.
+
+Continuous Delivery는 공유 레포지토리로 자동으로 Release 하는 것, Continuous Deployment는 Production 레벨까지 자동으로 배포하는 것을 의미한다.
+정리하자면 CI는 새로운 소스코드의 빌드, 테스트, 병합까지를 의미한다면 CD는 개발자의 변경 사항이 레포지토리를 넘어 고객의 프로덕션 환경까지 릴리즈 되는것을 의미한다.
+
+CI에서 예로 든 MSA와 같은 환경에서 에자일 방법론이 적용될 경우 서비스의 사용자는 최대한 빠른 시간 내에
+최신 버전의 Production을 제공 받을 필요가 있다.
+이 때, 소프트웨어가 언제든지 신뢰 가능한 수준의 버전을 유지할 수 있도록 서포트 하는 것이 CD라고 할 수 있다.
