--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -141,3 +141,21 @@ Java에서 문자열은 Heap 영역 내의 String Pool이라는 곳에서 따로
 - 레코드의 삽입과 삭제가 수시로 일어나는 경우에는 인덱스의 개수를 최소로 해야 효율적.
 - 인덱스가 없으면 특정한 값을 찾기 위해서 테이블의 모든 데이터를 확인하는 Table Scan이 발생한다.
 - 기본키를 위한 인덱스를 기본 인덱스, 기본 인덱스가 아닌 인덱스들을 보조 인덱스라고 한다. 대부분의 관계형 데이터 베이스 관리 시스템에서는 모든 기본 키에 데해서 자동적으로 기본 인덱스를 생성한다.
+
+
+## 2021-02-17
+
+### 클러스터형 인덱스, 넌 클러스트형 인덱스
+
+<b>클러스터형 인덱스</b>
+- 인덱스를 생성할 때는 데이터 페이지 전체를 다시 정렬한다.
+- 대용량의 데이터를 강제로 다시 클러스터 인덱스를 생성하는건 조심.
+- 인덱스 자체가 데이터 페이지이다. 인덱스 자체에 데이터가 포함.
+- 비클러스터형 인덱스 보다 검색 속도는 더 빠르다, 하지만 데이터의 입력/수정/삭제는 느리다.
+- 테이블에 한 개만 생성할 수 있다.
+
+
+<b>넌 클러스터형 인덱스</b>
+- 별도의 페이지에 인덱스를 구성한다.
+- 검색 속도는 느리지만, 데이터의 입력, 수정, 삭제가 더 빠르다.
+- 남용할 경우에는 시스템 성능을 떨어뜨린는 결과를 가져온다.
