--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -151,7 +151,7 @@ Java에서 문자열은 Heap 영역 내의 String Pool이라는 곳에서 따로
 - 인덱스를 생성할 때는 데이터 페이지 전체를 다시 정렬한다.
 - 대용량의 데이터를 강제로 다시 클러스터 인덱스를 생성하는건 조심.
 - 인덱스 자체가 데이터 페이지이다. 인덱스 자체에 데이터가 포함.
-- 비클러스터형 인덱스 보다 검색 속도는 더 빠르다, 하지만 데이터의 입력/수정/삭제는 느리다.
+- <b>비클러스터형 인덱스 보다 검색 속도는 더 빠르다, 하지만 데이터의 입력/수정/삭제는 느리다.</b>
 - 테이블에 한 개만 생성할 수 있다.
 
 
@@ -159,3 +159,36 @@ Java에서 문자열은 Heap 영역 내의 String Pool이라는 곳에서 따로
 - 별도의 페이지에 인덱스를 구성한다.
 - 검색 속도는 느리지만, 데이터의 입력, 수정, 삭제가 더 빠르다.
 - 남용할 경우에는 시스템 성능을 떨어뜨린는 결과를 가져온다.
+
+
+## 2021-02-22
+
+### SQL 실행순서, 쿼리 실행 과정.
+
+<b> 1. 구문 분석.</b><br>
+해당 쿼리가 문법적으로 틀리지 않는지 확인한다, 해당 구문을 SQL 서버가 이해할 수 있는 단위들로 분해하는 과정.
+<b> 2. 표준화</b><br>
+실제로 필요 없는 부분들을 제거하고 표준화된 쿼리 트리가 만들어진다.
+<b> 3. 최적화</b><br>
+통계나 조각 정보 등을 바탕으로 실행 계획을 만들어 낸다, 중요한 단계.
+- 쿼리 분석 : 검색 제한자(SARG) 인지 조인 조건인지 판단.
+- 인덱스 선택 : 인덱스 검색이나 테이블 스캔 중의 하나를 선택, 여러 인덱스 중 가장 효율적인 인덱스를 선택.
+- 조인 처리 : JOIN, UNION, GROUP BY, ORDER BY 절 확인하고 적절한 작업 순서 선택.
+<b> 4. 컴파일</b><br>
+컴파일을 하면 이진 코드가 생성된다. SQL Server에 메모리(프로시저 캐시)에 올린다.
+<b> 5. 실행</b><br>
+엑세스 루틴으로 가서 실제 처리를 하고 결과를 돌려준다.
+
+#### SELECET 실행 순서
+
+문법 순서 : SELECT -> FROM -> WHERE -> GROUP BY -> HAVING -> ORDER BY<br>
+실행 순서 : FROM -> WHERE -> GROUP BY -> HAVING -> SELECT -> OREDR BY<br>
+
+<ol>
+<li> 데이터 위치 (FROM) </li>
+<li> 조건에 맞는 데이터 (WHERE) </li>
+<li> 원하는 데이터로 가공 (GROUP BY) </li>
+<li> 가공한 것 중에서 조건에 맞는 것 (HAVING) </li>
+<li> 뽑아서 (SELECT) </li>
+<li> 정렬(ORDER BY) </li>
+</ol>
