--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -166,16 +166,16 @@ Java에서 문자열은 Heap 영역 내의 String Pool이라는 곳에서 따로
 ### SQL 실행순서, 쿼리 실행 과정.
 
 <b> 1. 구문 분석.</b><br>
-해당 쿼리가 문법적으로 틀리지 않는지 확인한다, 해당 구문을 SQL 서버가 이해할 수 있는 단위들로 분해하는 과정.
+해당 쿼리가 문법적으로 틀리지 않는지 확인한다, 해당 구문을 SQL 서버가 이해할 수 있는 단위들로 분해하는 과정.<br>
 <b> 2. 표준화</b><br>
 실제로 필요 없는 부분들을 제거하고 표준화된 쿼리 트리가 만들어진다.
 <b> 3. 최적화</b><br>
 통계나 조각 정보 등을 바탕으로 실행 계획을 만들어 낸다, 중요한 단계.
 - 쿼리 분석 : 검색 제한자(SARG) 인지 조인 조건인지 판단.
 - 인덱스 선택 : 인덱스 검색이나 테이블 스캔 중의 하나를 선택, 여러 인덱스 중 가장 효율적인 인덱스를 선택.
-- 조인 처리 : JOIN, UNION, GROUP BY, ORDER BY 절 확인하고 적절한 작업 순서 선택.
+- 조인 처리 : JOIN, UNION, GROUP BY, ORDER BY 절 확인하고 적절한 작업 순서 선택.<br>
 <b> 4. 컴파일</b><br>
-컴파일을 하면 이진 코드가 생성된다. SQL Server에 메모리(프로시저 캐시)에 올린다.
+컴파일을 하면 이진 코드가 생성된다. SQL Server에 메모리(프로시저 캐시)에 올린다.<br>
 <b> 5. 실행</b><br>
 엑세스 루틴으로 가서 실제 처리를 하고 결과를 돌려준다.
 
@@ -192,3 +192,39 @@ Java에서 문자열은 Heap 영역 내의 String Pool이라는 곳에서 따로
 <li> 뽑아서 (SELECT) </li>
 <li> 정렬(ORDER BY) </li>
 </ol>
+
+### JPA 영속성 컨텍스트
+
+JDBC를 이용해서 애플리케이션을 개발 할 때 쿼리를 실행하면 DB로 쿼리를 바로 날린다.
+하지만, 영속성 컨텍스트는 JDBC와 DB 사이에 위치하여 뭔가의 작업을 진행한다.
+- 조회할 데이터가 영속성 컨텍스트에 존재하는지 확인
+- 데이터가 없으면 쿼리를 생성
+- 쿼리를 DB에 전송
+- 결과 값을 영속성 컨텍스트가 전달 받음
+- 전달 받은 데이터를 엔티티로 저장
+- 엔티티 인스턴스를 리턴
+
+장점?
+<ol>
+<li>특정 비즈니스에서 update, insert, delete 를 여러 번 구현했을 때 이전 방식에서는
+코드가 수행될때마다 DB에 요청을 보내는 반면 영속성 컨텍스트는 쿼리를 생성하여
+특정 영역에 저장만 해두었다가 flush가 되는 순간 한꺼번에 DB로 쿼리를 날린다. 이를 JPA에서는 <b>"쓰기 지연"</b>이라고 한다.</li>
+<li>지연 로딩을 통해 특정 엔티티의 데이터를 사용하는 시점에 초기화하여 DB 요청을 보낼 수 있다.</li>
+</ol>
+
+영속성 컨텍스트는 트랜잭션이 종료되면 flush가 동작하게 된다.
+즉, 트랜잭션과 영속성 컨텍스트는 동일한 라이프 사이클을 가지고 있다고 보면 된다.
+
+### EntityManagerFactory?
+엔티티 매니저 팩토리는 엔티티 매니저를 관리한다. 엔티티 매니저는 엔티티를 저장, 수정, 삭제, 조회하는 등 엔티티와
+관련된 모든일을 한다.<br>
+엔티티 매니저 팩토리는 애플리케이션 전체에서 딱 한 번만 생성하고 공유해서 사용해야 한다.<br>
+엔티티 매니저 팩포리는 여러 쓰레드가 동시에 접근해도 안전하므로 서로 다른 쓰레드 간에 공유해도 된다.
+### EntityManager?
+엔티티와 관련된 모든 일을 처리하기에 이름 그대로 엔티티를 관리하는 관리자이다.
+엔티티 매니저를 이용하여 엔티티를 저장하게 되면 DB에 access하여 insert문을 전송한다.(중간 단계로 영속성 컨텍스트는 거치게 됨)
+<br>
+@PersistenceContext 애노테이션으로 주입받은 EntityManger는 Proxy로 감싸기 때문에 Thread-Safety를 보장한다.
+
+
+
