--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -168,12 +168,12 @@ Java에서 문자열은 Heap 영역 내의 String Pool이라는 곳에서 따로
 <b> 1. 구문 분석.</b><br>
 해당 쿼리가 문법적으로 틀리지 않는지 확인한다, 해당 구문을 SQL 서버가 이해할 수 있는 단위들로 분해하는 과정.<br>
 <b> 2. 표준화</b><br>
-실제로 필요 없는 부분들을 제거하고 표준화된 쿼리 트리가 만들어진다.
+실제로 필요 없는 부분들을 제거하고 표준화된 쿼리 트리가 만들어진다.<br>
 <b> 3. 최적화</b><br>
 통계나 조각 정보 등을 바탕으로 실행 계획을 만들어 낸다, 중요한 단계.
 - 쿼리 분석 : 검색 제한자(SARG) 인지 조인 조건인지 판단.
 - 인덱스 선택 : 인덱스 검색이나 테이블 스캔 중의 하나를 선택, 여러 인덱스 중 가장 효율적인 인덱스를 선택.
-- 조인 처리 : JOIN, UNION, GROUP BY, ORDER BY 절 확인하고 적절한 작업 순서 선택.<br>
+- 조인 처리 : JOIN, UNION, GROUP BY, ORDER BY 절 확인하고 적절한 작업 순서 선택. <br>
 <b> 4. 컴파일</b><br>
 컴파일을 하면 이진 코드가 생성된다. SQL Server에 메모리(프로시저 캐시)에 올린다.<br>
 <b> 5. 실행</b><br>
