--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -174,10 +174,7 @@ Java에서 문자열은 Heap 영역 내의 String Pool이라는 곳에서 따로
 - 쿼리 분석 : 검색 제한자(SARG) 인지 조인 조건인지 판단.
 - 인덱스 선택 : 인덱스 검색이나 테이블 스캔 중의 하나를 선택, 여러 인덱스 중 가장 효율적인 인덱스를 선택.
 - 조인 처리 : JOIN, UNION, GROUP BY, ORDER BY 절 확인하고 적절한 작업 순서 선택. 
-
-<br>
-<b>
- 4. 컴파일</b><br>
+<b> 4. 컴파일</b><br>
 컴파일을 하면 이진 코드가 생성된다. SQL Server에 메모리(프로시저 캐시)에 올린다.<br>
 <b> 5. 실행</b><br>
 엑세스 루틴으로 가서 실제 처리를 하고 결과를 돌려준다.
