--- a/docs/TIL/2021-02.md
+++ b/docs/TIL/2021-02.md
@@ -236,3 +236,21 @@ JDBC를 이용해서 애플리케이션을 개발 할 때 쿼리를 실행하면
 String str2 = "Hello" 를 추가할 경우 String pool에서 같은 문자열이 있는지 찾고 있으면 그 주소값을 마찬가지로 str2에 저장한다.
 하지만, new String의 경우에는 계속 새로운 객체를 만들어 Heap에 저장하기 때문에 메모리를 낭비할 수 있다.
 
+## 2021-02-25
+
+### 프로세스, 스레드
+
+기본적인 정의는 프로세스는 운영체제로부터 자원을 할당받은 작업의 단위이고 스레드는 프로세스가 할당받은 자원을 이용하는 실행 흐름의 단위이다.
+쉽게 말해서 프로그램은 파일이 저장 장치에 저장되어 있지만 메모리에 올라가 있지 않는 정적인 상태이다.
+프로그램을 실행하는 순간 컴퓨터 메모리에 올라가고 이 상태의 프로그램을 <b>프로세스</b>라고 한다.
+스레드는 프로세스가 할당받은 메모리 영역 내에서 Stack 형식으로 따로 할당 받고, 나머지 Code, Data, Heap 형식으로 할당된 메모리 영역은 공유한다.
+따라서, 각각의 스레드는 별도의 스택을 가지고 있지만 힙 메모리는 서로 읽고 쓸 수 있게 된다.
+<br>
+<ol>멀티스레드의 장점
+<li>컨텍스트 스위칭할 때 공유하고 있는 메모리만큼의 메모리 자원을 아낄 수 있다.<li>
+<li>스레드는 프로세스 내의 스택 영역을 제외한 모든 메모리를 공유하기 때문에 통신의 부담이 적어서 응답 시간이 빠르다.<li>
+</ol>
+<ol>멀티스레드의 단점
+<li>스레드 하나가 프로세스 내 자원을 망쳐버리면 모든 프로세스가 종료될 수 있다.<li>
+<li>자원을 공유하기 때문에 필연적으로 동기화 문제가 발생할 수 밖에 없다.<li>
+</ol>
