--- a/docs/TIL/2021-03.md
+++ b/docs/TIL/2021-03.md
@@ -62,7 +62,19 @@ var value = elem.value // TypeError : Cannot read property 'value' of null
 {% endhighlight %}
 </code>
 </pre>
-
+<br>
+<pre>
+<code>
+{% highlight javascript %}
+{% raw %}
+var elem = null;
+var value = elem && elem.value;
+{% endraw %}
+{% endhighlight %}
+</code>
+</pre>
+<br>
+elem이 null이나 undefined와 같은 Falsy 값이면 elem으로 평가되고, elem이 Truthy 값이면 elem.value로 평가된다.
 
 ---
 
