--- a/docs/TIL/2021-03.md
+++ b/docs/TIL/2021-03.md
@@ -106,5 +106,45 @@ console.log(test2);
 
 ---
 
+## 2021-03-14
+
+### React & Spring boot 소켓 활용 토이프로젝트 진행 중(1)
+
+요 며칠 코딩테스트 준비 및 토이 프로젝트 진행 때문에 TIL을 작성하지 못했다는 심심한 핑계를 대본다.
+우선 현재 알게된 ? 혼자서 이해한 정도만 기록할 겸 적으려고 한다. 이것마저 적지 않으면 매번 까먹을것 같아서 기록해본다.
+물론 틀릴 확률이 높지만 나중에 보면서 '그땐 그랬지'라는 생각이 들 수 있게끔...
+{% highlight java %}
+@MessageMapping("/room/{room}") //리액트에서 SENDMESSAGE랑 연결되는것 같음
+    public void test(@DestinationVariable String room,  @Payload ChatMessage chatMessage) throws Exception
+    {
+        //여기서 /topic/room/{roomId}는 리액트에서  SockJSClient연결할떄 토픽 정해주는데 거기 토픽으로 보낸다는것 같음.
+        this.template.convertAndSend("/topic/room/"+room, chatMessage );
+    }
+{% endhighlight %}
+
+우선 위에는 스프링부트에 작성한 컨트롤러의 소스 코드이다. 
+그리고 아래 자바스크립트에서 버튼을 클릭하여 메세지를 보내게 되면 json 형태로 이름과 메세지가 가게된다.
+그리고 해당 주소는 /app/room/{room} 이다. 이건 위에 MessageMapping이랑 같다.
+또한, 그러면 스프링부트에서 메세지를 받고 /topic/room/{room} 을 구독하는 클라이언트들에게 
+메세지를 보내주는 형식인것 같다.
+
+{% highlight javascript %}
+ handleButtonClicked(){
+        this.clientRef.sendMessage('/app/room/2', JSON.stringify({
+            name : this.state.name,
+            message : this.state.typedMessage
+        }));
+    };
+{% endhighlight %}
+
+{% highlight javascript %}
+ <SockJsClient url='http://localhost:8080/websocket-chat/'
+                              topics={['/topic/room/2']} 
+		.... 
+{% endhighlight %}
+
+
+--- 
+
 출처
 - https://gwonsungjun.github.io/articles/2019-04/gradle_multi_module
